spacing issues resolved

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,8 +35,12 @@ h1 {
 	text-decoration: line-through;
 }
 
-.noLinethrough {
-	text-decoration: none;
+.complete {
+	display: inline;
+}
+
+.incomplete {
+	display: none;
 }
 
 #saveBut {
